--- a/templates/admin/edit_user.html.twig
+++ b/templates/admin/edit_user.html.twig
@@ -17,4 +17,5 @@
 
     <a href="{{ path('admin_show_users') }}" class="btn btn-secondary mt-2">Retour</a>
      </div>
+    {{ dump(form) }}
 {% endblock %}
