--- a/templates/admin/show_users.html.twig
+++ b/templates/admin/show_users.html.twig
@@ -13,6 +13,7 @@
                  <th scope="col">Prénom</th>
                  <th scope="col">Email</th>
                  <th scope="col">Rôles</th>
+                 <th scope="col">Opérations</th>
             </tr>
         </thead>
         <tbody>
@@ -25,7 +26,10 @@
                     <td>{{ user.roles | join(', ') }}</td>
                     <td>
                         <a href="{{ path('admin_edit_user', {'id': user.id}) }}" class="btn btn-primary">Edit</a>
-                        <a href="{{ path('admin_delete_user', {'id': user.id}) }}" class="btn btn-secondary">Delete</a>
+                        <form method="post" action="{{ path('admin_delete_user', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+                            <button type="submit" class="btn btn-secondary">Delete</button>
+                        </form>
                     </td>
                 </tr>
             {% endfor %}
